[package]
name = "handshaker"
version = "0.1.0"
edition = "2021"
authors = ["Marin Peko <marinpeko5@gmail.com>"]
license = "MIT"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
env_logger = { version = "0.10.0" }
lazy_static = { version = "1.4.0" }
log = { version = "0.4.20" }
rand = { version = "0.8.5" }
sha2 = { version = "0.10.8" }
strum = { version = "0.25.0", features = ["derive"] }
tokio = { version = "1.33.0", features = ["full"] }

[dev-dependencies]
chrono = { version = "0.4" }
